TAG: qcreports_db-6-0-13-10
TAG: qcreports_db-6-0-13-9
DATE: 01/30/2019
STAFF: lec
CHANGES: TR13030/add date stamp to all GO reports

TAG: qcreports_db-6-0-13-8
DATE: 01/23/2019
STAFF: lec
CHANGES: TR13017/retire MouseCyc

TAG: qcreports_db-6-0-13-7
DATE: 12/21/2018
STAFF: lec
CHANGES: TR12981/qcr.shtml/MGI_GenoNoMarker link incorrect

TAG: qcreports_db-6-0-13-6
DATE: 11/26/2018
STAFF: sc
CHANGES: qcr.shtml - Added new emalload index page

TAG: qcreports_db-6-0-13-4
DATE: 09/20/2018
STAFF: sc
CHANGES: restructured and index added, AP version hangs
    on the test server:
1) BIB_StatusMismatch_GXD.sql
2) BIB_StatusMismatch_AP.sql

TAG: qcreports_db-6-0-13-3
DATE: 09/13/2018
STAFF: lec  
CHANGES: TR12953/add mp_emapaload to Data Loads section

TAG: qcreports_db-6-0-13-2
DATE: 09/10/2018
STAFF: lec  
CHANGES: TR12954/GXD_Images.py/add eNeuro

TAG: qcreports_db-6-0-13-1
DATE: 09/04/2018
STAFF: lec  
CHANGES: TR12734/GenFevah/Mouse Genome Project

TAG: qcreports_db-6-0-12-13
DATE: 08/29/2018
STAFF: lec
CHANGES: 
1) TR12946 : weekly/ALL_NewAllele.py
2) TR12930 : weekly/PRB_StrainJAX2.py

TAG: qcreports_db-6-0-12-12
DATE: 08/23/2018
STAFF: sc
CHANGES: TR12940 
1) retire GXD_HTNoMasterBib report
2) modify GXD_WithdrawnMarker report

TAG: qcreports_db-6-0-12-11
DATE: 08/14/2018
STAFF: lec
CHANGES: TR12902/mgd/GXD_SpecNoAge.sql

TAG: qcreports_db-6-0-12-10
DATE: 08/09/2018
STAFF: sc
CHANGES: TR12850 replace mgd/PRB_StrainByDate.sql
    with mgd/PRB_Strain_NonStdNoAttributes.py
    keep as Strains report #5 same text, different report

TAG: qcreports_db-6-0-12-9
DATE: 08/08/2018
STAFF: sc
CHANGES: TR12901
New: mgd/ALL_ConditionalNeedsReview.py

TAG: qcreports_db-6-0-12-8
DATE: 07/24/2018
STAFF: lec
CHANGES: TR12900
mgd/GXD_Stats.py
mgd/GXD_SpecTheilerAge.py

TAG: qcreports_db-6-0-12-7
DATE: 07/12/2018
STAFF: lec
CHANGES: TR12894/DO annotation counts
weekly/ALL_Progress.py

TAG: qcreports_db-6-0-12-6
DATE: 05/17/2018
STAFF: sc